Use more sensible HTTP response codes for PUT'ing content
Instead of 201 for creating a revision and 200 for content not changed, use 200 for creating a revision and 204 for content not changed (which is the response code that means there is no response content, but if there is no change, we have no response content).
